# TranscriptCollector

./: .gitignore  LICENSE  README.md  app.py  init_cdk_poetry.sh  pyproject.toml  scan_channels.ipynb
lambda/: transcript_collector.py
lambda/logging_setup/: config.py
tests/unit/: test_transcript_collector_project_stack.py
transcript_collector_project/: transcript_collector_project_stack.py
